minor styling on addbook to fix vertical alignment

--- a/client/src/containers/AddBook/AddBook.css
+++ b/client/src/containers/AddBook/AddBook.css
@@ -3,7 +3,7 @@ body {
 }
 
 .books {
-  background-color: rgba(255, 255, 255, .75);
+  background-color: whitesmoke;
   margin: 25px;
   border-radius: 10px;
   color: black;
@@ -11,4 +11,12 @@ body {
 
 .search {
   margin-top: 100px;
+}
+
+.addtolibrary {
+  margin-top: 20px;
+}
+
+.bookcoveradd {
+  margin-top: 20px;
 }
