--- a/client/src/containers/SignUp/SignUp.css
+++ b/client/src/containers/SignUp/SignUp.css
@@ -4,5 +4,5 @@
     padding: 20px;
     width: 75%;
     border-radius: 10px;
-    margin-top: 5%;
+    margin-top: 100px;
 }
